feat : Update Enrollment Done

--- a/Views/Dashboard/Dashboard.cshtml
+++ b/Views/Dashboard/Dashboard.cshtml
@@ -31,8 +31,8 @@
                         </li>
                         <li class="list-group-item text-decoration-none"> <a asp-controller="Educator" asp-action="GetMyCourses"
                                 class="text-decoration-none">My Courses </a> </li>
-                        <li class="list-group-item text-decoration-none"> <a asp-controller="Educator"
-                                asp-action="GetAllEnrollments" class="text-decoration-none ">Manage Enrollments </a>
+                        <li class="list-group-item text-decoration-none"> <a asp-controller="Enrollment"
+                                asp-action="GetMyEnrollments" class="text-decoration-none ">Manage Enrollments </a>
                         </li>
                         <li class="list-group-item text-decoration-none"> <a asp-controller="Educator"
                                 asp-action="GetAllEnquiries" class="text-decoration-none ">Enquires</a></li>
