--- a/Views/Enrollment/CreateNewEnrollment.cshtml
+++ b/Views/Enrollment/CreateNewEnrollment.cshtml
@@ -1,4 +1,4 @@
-@model Test_EduHub.Models.Domain.EnrollmentViewModel
+@* @model Test_EduHub.Models.Domain.EnrollmentViewModel
 
 <form asp-action="CreateNewEnrollment">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -15,4 +15,4 @@
     <div class="form-group">
         <input type="submit" value="Create" class="btn btn-primary" />
     </div>
-</form>
+</form> *@
