feat: enrollment for student done

--- a/Views/Dashboard/Dashboard.cshtml
+++ b/Views/Dashboard/Dashboard.cshtml
@@ -55,7 +55,7 @@
                         <li class="list-group-item text-decoration-none"> <a asp-controller="Course" asp-action="GetAllCourses"
                                 class="text-decoration-none ">Courses Library</a>
                         </li>
-                        <li class="list-group-item text-decoration-none"> <a asp-controller="Course" asp-action="GetMyCourses"
+                        <li class="list-group-item text-decoration-none"> <a asp-controller="Student" asp-action="GetStudentEnrolledCourses"
                                 class="text-decoration-none">My Enrollments </a> </li>
                         <li class="list-group-item text-decoration-none"> <a asp-controller="Course"
                                 asp-action="GetAllEnrollments" class="text-decoration-none ">Enroll for New Course </a>
