--- a/Views/Course/CourseDetails.cshtml
+++ b/Views/Course/CourseDetails.cshtml
@@ -26,10 +26,12 @@
                     <img src="~/images/courses/course.webp" alt="@course.Title" class="img-fluid rounded mb-3"
                         style="width: 100%; height: auto;">
 
-                    @if (course.UserId == Convert.ToInt32(HttpContextAccessor.HttpContext.Session.GetString("User Id")) &&
+                    @if (course.UserId == Convert.ToInt32(HttpContextAccessor.HttpContext.Session.GetString("UserId")) &&
                    HttpContextAccessor.HttpContext.Session.GetString("Role") == "Educator")
                     {
                         <div class="d-flex justify-content-end">
+                            <a asp-action="AddCourseMaterial" asp-controller="Material" asp-route-id="@course.Id"
+                                class="btn btn-warning me-2">Add Material</a>
                             <a asp-action="EditCourse" asp-controller="Course" asp-route-id="@course.Id"
                                 class="btn btn-warning me-2">Edit</a>
                             <a class="btn btn-danger" asp-action="DeleteCourse" asp-controller="Course"
@@ -73,6 +75,22 @@
 </div>
 
 @section Scripts {
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var successMessage = '@TempData["SuccessMessage"]';
+            if (successMessage) {
+                Toastify({
+                    text: successMessage,
+                    duration: 3000,
+                    close: true,
+                    gravity: "top",
+                    position: "center",
+                    backgroundColor: "#4361ee",
+                    stopOnFocus: true
+                }).showToast();
+            }
+        });
+    </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
