feat : Enquiry from Educator Done

--- a/Views/Dashboard/Dashboard.cshtml
+++ b/Views/Dashboard/Dashboard.cshtml
@@ -34,7 +34,7 @@
                         <li class="list-group-item text-decoration-none"> <a asp-controller="Enrollment"
                                 asp-action="GetMyEnrollments" class="text-decoration-none ">Manage Enrollments </a>
                         </li>
-                        <li class="list-group-item text-decoration-none"> <a asp-controller="Educator"
+                        <li class="list-group-item text-decoration-none"> <a asp-controller="Enquiry"
                                 asp-action="GetAllEnquiries" class="text-decoration-none ">Enquires</a></li>
                         <li class="list-group-item text-decoration-none"> <a asp-controller="Educator"
                                 asp-action="GetAllFeedbacks" class="text-decoration-none ">View Feedbacks</a></li>
