feat : Feedback Module Completed

--- a/Views/Dashboard/Dashboard.cshtml
+++ b/Views/Dashboard/Dashboard.cshtml
@@ -35,9 +35,9 @@
                                 asp-action="GetMyEnrollments" class="text-decoration-none ">Manage Enrollments </a>
                         </li>
                         <li class="list-group-item text-decoration-none"> <a asp-controller="Enquiry"
-                                asp-action="GetAllEnquiries" class="text-decoration-none ">Enquires</a></li>
-                        <li class="list-group-item text-decoration-none"> <a asp-controller="Educator"
-                                asp-action="GetAllFeedbacks" class="text-decoration-none ">View Feedbacks</a></li>
+                                asp-action="GetAllEnquiries" class="text-decoration-none ">Manage Enquires</a></li>
+                        <li class="list-group-item text-decoration-none"> <a asp-controller="Feedback"
+                                asp-action="GetEducatorFeedbacks" class="text-decoration-none ">View Feedbacks</a></li>
                     </ul>
                 </div>
                 <div class="col mx-3">
@@ -60,8 +60,8 @@
                         <li class="list-group-item text-decoration-none"> <a asp-controller="Course"
                                 asp-action="GetAllEnrollments" class="text-decoration-none ">Enroll for New Course </a>
                         </li>
-                        <li class="list-group-item text-decoration-none"> <a asp-controller="Course"
-                                asp-action="GetAllEnquiries" class="text-decoration-none ">Enquires</a></li>
+                        <li class="list-group-item text-decoration-none"> <a asp-controller="Enquiry"
+                                asp-action="GetStudentEnquiries" class="text-decoration-none ">My Enquires</a></li>
                         @* <li class="list-group-item text-decoration-none"> <a asp-controller="Course"
                 asp-action="GetAllFeedbacks" class="text-decoration-none ">Submit Enquiry</a></li> *@
                     </ul>
