--- a/Views/Student/GetStudentEnrolledCourses.cshtml
+++ b/Views/Student/GetStudentEnrolledCourses.cshtml
@@ -33,7 +33,7 @@
 
                         </div>
                         <div class="mt-auto position-absolute bottom-0 end-0 p-2 cursor-pointer mt-2 ">
-                            <a asp-action="CourseDetails" asp-controller="Course" asp-route-id="@item.Id">
+                            <a asp-action="MyCourseDetails" asp-controller="Student" asp-route-id="@item.Id">
 
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-arrow-up-right-square mt-2" viewBox="0 0 16 16">
