--- a/Views/Educator/GetMyCourses.cshtml
+++ b/Views/Educator/GetMyCourses.cshtml
@@ -58,7 +58,7 @@
                                 @item.Level
                             </p>
                             <p class="card-text text-capitalize fw-bold">
-                                $ @item.Price
+                                ₹ @item.Price
                             </p>
 
                         </div>
