--- a/Views/Enquiry/GetStudentEnquiries.cshtml
+++ b/Views/Enquiry/GetStudentEnquiries.cshtml
@@ -50,7 +50,7 @@
     <div class="text-right w-100 justify-content-end d-flex ">
         <h6>
             <a class="btn btn-link" asp-action="GetPastStudentEnquiries" asp-controller="Enquiry">
-                 Past Enquiries
+                 Enquiry History
             </a>
         </h6>
     </div>
