--- a/Views/Feedback/DetailedFeedback.cshtml
+++ b/Views/Feedback/DetailedFeedback.cshtml
@@ -21,5 +21,5 @@
         </div>
     }
 
-     <a asp-action="MyCourse" asp-action="GetEducatorFeedbacks" asp-controller="Feedback">Back to Courses</a>
+     <a asp-action="GetEducatorFeedbacks" asp-controller="Feedback" class="btn btn-link">Back to Courses</a>
 </div>
