--- a/Views/Course/GetAllCourses.cshtml
+++ b/Views/Course/GetAllCourses.cshtml
@@ -28,7 +28,7 @@
                                 @item.Level
                             </p>
                             <p class="card-text text-capitalize fw-bold">
-                               $ @item.Price
+                               ₹ @item.Price
                             </p>
 
                         </div>
