feat : Enrollment Module Completed

--- a/Views/Dashboard/Dashboard.cshtml
+++ b/Views/Dashboard/Dashboard.cshtml
@@ -57,8 +57,8 @@
                         </li>
                         <li class="list-group-item text-decoration-none"> <a asp-controller="Student" asp-action="GetStudentEnrolledCourses"
                                 class="text-decoration-none">My Enrolled Courses </a> </li>
-                        <li class="list-group-item text-decoration-none"> <a asp-controller="Course"
-                                asp-action="GetAllEnrollments" class="text-decoration-none ">Enroll for New Course </a>
+                        <li class="list-group-item text-decoration-none"> <a asp-controller="Enrollment"
+                                asp-action="CreateNewEnrollment" class="text-decoration-none ">Enroll for New Course </a>
                         </li>
                         <li class="list-group-item text-decoration-none"> <a asp-controller="Enquiry"
                                 asp-action="GetStudentEnquiries" class="text-decoration-none ">My Enquires</a></li>
