--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -1,1 +1,66 @@
-Contact Here !!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us - EduHub</title>
+
+</head>
+<body>
+   
+
+    <div class="container mt-5">
+        <h1 class="text-center">Get in Touch</h1>
+        <p class="lead text-center">We'd love to hear from you! Please fill out this form:</p>
+
+        <form>
+            <div class="form-group">
+                <label for="firstName">First Name</label>
+                <input type="text" class="form-control" id="firstName" placeholder="Enter first name" required>
+            </div>
+            <div class="form-group">
+                <label for="lastName">Last Name</label>
+                <input type="text" class="form-control" id="lastName" placeholder="Enter last name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email Address</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email address" required>
+            </div>
+            <div class="form-group">
+                <label for="phone">Phone Number</label>
+                <input type="tel" class="form-control" id="phone" placeholder="Enter phone number" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control" id="message" rows="3" placeholder="Enter your message" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary mt-3">Send Message</button>
+        </form>
+
+        <h2 class="mt-5">Our Address</h2>
+        <p>123 Main St, Anytown, USA 12345</p>
+
+        <h2>Phone Numbers</h2>
+        <ul class="list-group mb-5">
+            <li class="list-group-item">Phone: 555-555-5555</li>
+            <li class="list-group-item">Fax: 555-555-5556</li>
+        </ul>
+
+        <h2>Email Addresses</h2>
+        <ul class="list-group mb-5">
+            <li class="list-group-item">info@eduhub.com</li>
+            <li class="list-group-item">support@eduhub.com</li>
+        </ul>
+
+        <h2>Follow Us</h2>
+        <div class="row">
+            <div class="col-md-2">
+                <a href="#" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+            </div>
+            <div class="col-md-2
