feat : 1.0 ready of EduHub

--- a/Views/Dashboard/Dashboard.cshtml
+++ b/Views/Dashboard/Dashboard.cshtml
@@ -15,6 +15,7 @@
                     backgroundColor: "#4361ee",
                     stopOnFocus: true
                 }).showToast();
+                @TempData.Remove("SuccessMessage")
             }
         });
     </script>
